--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: jflanagan again
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Longer-form thoughts from Joshua Flanagan, a software developer in Austin, TX
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
-url: "https://joshuaflanagan.github.io/blog" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.joshuaflanagan.com/blog" # the base hostname & protocol for your site
+website: "http://www.joshuaflanagan.com"
+twitter_username: jflanagan
+github_username: joshuaflanagan
 
 # Build settings
 markdown: kramdown
